--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/img/apple-icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/assets/img/favicon.ico">
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/templatemo.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/custom.css">
+
+    <!-- Load fonts style after rendering the layout styles -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/fontawesome.min.css">
+       <!-- Slick -->
+       <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/slick.min.css">
+       <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/slick-theme.css">
+       <!-- Load map styles -->
+       <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
+       <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+    
+
+    <title>Zay--Give you a new professional look.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +58,69 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+     <!-- Start Script -->
+     <script src="%PUBLIC_URL%/assets/js/jquery-1.11.0.min.js"></script>
+     <script src="%PUBLIC_URL%/assets/js/jquery-migrate-1.2.1.min.js"></script>
+     <script src="%PUBLIC_URL%/assets/js/bootstrap.bundle.min.js"></script>
+     <script src="%PUBLIC_URL%/assets/js/templatemo.js"></script>
+     <script src="%PUBLIC_URL%/assets/js/custom.js"></script>
+       <!-- Start Slider Script -->
+    <script src="%PUBLIC_URL%/assets/js/slick.min.js"></script>
+
+     <script>
+      var mymap = L.map('mapid').setView([-23.013104, -43.394365, 13], 13);
+
+      L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+          maxZoom: 18,
+          attribution: 'Zay Telmplte | Template Design by <a href="https://templatemo.com/">Templatemo</a> | Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+              '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+              'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+          id: 'mapbox/streets-v11',
+          tileSize: 512,
+          zoomOffset: -1
+      }).addTo(mymap);
+
+      L.marker([-23.013104, -43.394365, 13]).addTo(mymap)
+          .bindPopup("<b>Zay</b> eCommerce Template<br />Location.").openPopup();
+
+      mymap.scrollWheelZoom.disable();
+      mymap.touchZoom.disable();
+  </script>
+    <script>
+      $('#carousel-related-product').slick({
+          infinite: true,
+          arrows: false,
+          slidesToShow: 4,
+          slidesToScroll: 3,
+          dots: true,
+          responsive: [{
+                  breakpoint: 1024,
+                  settings: {
+                      slidesToShow: 3,
+                      slidesToScroll: 3
+                  }
+              },
+              {
+                  breakpoint: 600,
+                  settings: {
+                      slidesToShow: 2,
+                      slidesToScroll: 3
+                  }
+              },
+              {
+                  breakpoint: 480,
+                  settings: {
+                      slidesToShow: 2,
+                      slidesToScroll: 3
+                  }
+              }
+          ]
+      });
+  </script>
+
+ 
+   
+     <!-- End Script -->
   </body>
 </html>
